<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".view.MainActivity">

    <ImageButton
        android:id="@+id/filter_Btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:src="@drawable/outline_filter_list_24"
        android:contentDescription="@string/filter_Option"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/topBtn_View"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/filter_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/genre_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/genreTxt_Btn"
            android:textSize="15sp" />

        <Button
            android:id="@+id/subject_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/subjectTxt_Btn"
            android:textSize="15sp"/>


        <Button
            android:id="@+id/part_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/partTxt_Btn"
            android:textSize="15sp" />

        <Button
            android:id="@+id/region_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/regionTxt_Btn"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topMenuItem_View"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topBtn_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>