<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:id="@+id/TopTitle_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/MainTitle_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title_Txt"
            android:textSize="45sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bungee"/>

        <TextView
            android:id="@+id/SubjectTitle_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/subTitle_txt"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/alfa_slab_one" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LoginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopTitle_View">

        <EditText
            android:id="@+id/userName_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="name"
            android:hint="@string/ID_Hint"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userPassword_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:hint="@string/PW_HINT"
            android:inputType="textPassword"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <Button
            android:id="@+id/findPassword_Btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="0dp"
            android:text="@string/FindPassword_Btn"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/LogIn_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="0dp"
            android:text="@string/Login_Btn"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="0dp"
            android:text="@string/SignIn_Btn"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>