<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".view.SignInActivity">

    <LinearLayout
        android:id="@+id/TopTitle_View_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title_Txt"
            android:textSize="45sp"
            android:textColor="@color/black"
            android:fontFamily="@font/bungee"/>

        <TextView
            android:id="@+id/SubjectTitle_View_FindPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/subTitle_SignIn"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/SignIn_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopTitle_View_signIn">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickName_SignIn_Input_Layout"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:hint="@string/userNickName_Hint"
            android:textSize="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickName_SignIn_Input_Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmail_SignIn_Input_Layout"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:hint="@string/userEmail_Hint"
            android:textSize="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail_SignIn_Input_Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPassword_SignIn_Input_Layout"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:hint="@string/userPassword_Hint"
            android:textSize="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword_SignIn_Input_Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confPassword_SignIn_Input_Layout"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:hint="@string/userPassword_confirm_Hint"
            android:textSize="20sp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confPassword_SignIn_Input_Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="0dp"
            android:text="@string/signInTxt_Btn"
            android:textSize="18sp" />

        <Button
            android:id="@+id/toLoginPage"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="0dp"
            android:text="@string/toLogInTxt_Btn"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>