<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".view.FindPasswordActivity">

    <LinearLayout
        android:id="@+id/TopTitle_View_FindPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/MainTitle_View_FindPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:text="@string/mainTitle_FindPW"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/SubjectTitle_View_FindPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/subTitle_FindPW"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/FindPW_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/TopTitle_View_FindPW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmail_FindPW_Input_Layout"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="80dp"
            android:hint="@string/userEmail_Hint_FindPW"
            android:autofillHints="emailAddress"
            android:textSize="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail_FindPW_Input_Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendResetEmail_FindPW_Btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:text="@string/sendResetEmail_Btn"
            android:textSize="18sp"
            android:elevation="0dp" />

        <Button
            android:id="@+id/toLoginView_FindPW_Btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:text="@string/toLogInTxt_Btn"
            android:textSize="18sp"
            android:elevation="0dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>