<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/TopProfile_View"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ProfileImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_blank_profile"
                android:contentDescription="@string/profile_image_view" />

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/mod_profile_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_mode"
            android:contentDescription="@string/mod_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TopProfile_View" />

        <TextView
            android:id="@+id/nickname_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/NickName"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/mod_profile_Btn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nickname_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/nickname_TxtView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/email_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/Email"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/nickname_Txt"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/email_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/email_TxtView"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>